--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Plataforma pra emitir pix",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,8 +19,12 @@
   "homepage": "https://github.com/xThiagoSant/tss-web-pix#readme",
   "dependencies": {
     "axios": "^0.21.1",
+    "consign": "^0.1.6",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.12"
   }
 }
