Teste heroku com index na raiz

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Plataforma pra emitir pix",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev:start": "nodemon src/index.js",
+    "start": "node index.js",
+    "dev:start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
